2004-08-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Updated tile theme handling to permit use of
	third-party theme packages.

2004-08-16  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Adjusted checkNick so it doesn't make the nick
	column width too wide if SomeoneHasAReallyLongNickLikeSomeIrcUsers.

2004-08-13  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added a [catch] to checkPage to prevent it from
	stop updating after a temporary DNS failure. 

2004-08-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix a bug with overly greedy date string matching
	in the history parsing code.

2004-06-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added support for forcing a user selected user-agent
	string - useful for dealing with facist proxy admins. The default
	is now more Mozilla-like.

2004-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::parseStr): add recognition of any 6 or
	7-digit sequence as a SF bug id, make it a URL that jumps to it.
	(::tkchat::checkNick): correct margin initialization

2004-06-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch from bug #977354 for cosmetic fix to
	the About dialog. (by Joe Mistachkin).

	* tkchat.tcl: Removed a number of 8.4+isms so that tkchat operates
	with Tk8.3 again. Avoid eq and ne and use tk_windowingsystem.

2004-06-04  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Added message timestamps and a visibility for them
	option in the Visibility menu for them.
	* ChangeLog: Fixed a few 2004 entries incorrectly set to 2003

2004-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Updated babelfish web scraping for translate menu.

2004-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::msgSend): convert msg to utf-8 if necessary

2004-05-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed bug #955473 erroneous winico requirement
