@@ -1,3 +1,7 @@
+2004-09-07  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl (::tkchat::userPost): update tip url to use tip.tcl.tk
+
 2004-08-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Updated tile theme handling to permit use of
